<resources>
    <string name="app_name">Place Search</string>
    <string name="tab_search">SEARCH</string>
    <string name="tab_favorite">FAVORITES</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="NoFavorites">No favorites</string>
    <string name="NoResults">No results</string>
    <string name="NoReviews">No reviews</string>


    <!-- Tab_Search -->
    <string name="keyword">Keyword</string>
    <string name="error_keyword">Please enter mandatory field</string>
    <string name="input_keyword">Enter keyword</string>
    <string name="category">Category</string>
    <string name="input_category">default</string>
    <string-array name="input_categories">
        <item>default</item>
        <item>test1</item>
        <item>test2</item>
        <item>test3</item>
    </string-array>
    <string name="distance">Distance (in miles)</string>
    <string name="input_distance">Enter distance (default 10 miles)</string>
    <string name="location">From</string>
    <string name="input_location">Type in the location</string>
    <string name="error_location">Please enter mandatory field</string>
    <string name="title_activity_search_result">Search results</string>
    <string name="title_activity_place_detail">PlaceDetail</string>

    <!-- Page_Detail -->
    <string name="travel_mode">Driving</string>
    <string-array name="travel_mode">
        <item>Driving</item>
        <item>Bicycle</item>
        <item>Walking</item>
    </string-array>
    <string name="review_mode">Google reviews</string>
    <string-array name="review_mode">
        <item>Google reviews</item>
        <item>Yelp reviews</item>
    </string-array>
    <string name="review_order">Default order</string>
    <string-array name="review_order">
        <item>Default order</item>
        <item>Highest Rating</item>
        <item>Lowest Rating</item>
        <item>Most Recent</item>
        <item>Least Recent</item>
    </string-array>


</resources>